horizontal-scrollbar-issue-fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -254,3 +254,8 @@ background: linear-gradient(0deg, rgb(143, 8, 150) 0%, rgb(120, 2, 130) 100%);
     .vertical-scrollbar::-webkit-scrollbar{
       display: none;
     }
+
+    html, body {
+      overflow-x: hidden;
+    }
+    
